# pickle-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
features/: CMakeLists.txt
features/example-pickle/: main.cc  steps.cc
features/features/: feedback.feature
features/features/steps/: steps.rb
pickle-cpp/: CMakeLists.txt
pickle-cpp/include/pickle-cpp/: cucumber.h  pickle.h
pickle-cpp/src/: cucumber.cc  engine.cc  engine.h  error.h  main.cc  pickle.cc  pipestream.cc  pipestream.h  runner.cc  runner.h  step_definition.cc  subprocess.cc  subprocess.h
pickle-cpp/tests/: pipestream.cc  runner.cc  subprocess.cc
pickle-os/: CMakeLists.txt
pickle-os/interface/: CMakeLists.txt
pickle-os/interface/include/pickle/os/: oserror.h  subprocess.h
pickle-os/linux/: CMakeLists.txt
pickle-os/linux/src/: forkexec.cc  forkexec.h  pipestream.cc
pickle-os/linux/tests/: subprocess.cc  subprocess_stub.cc
pickle-runner/: CMakeLists.txt
scripts/: build  build-docker  clang-format
settings/: CMakeLists.txt
toolchain/clang-ninja/: Dockerfile  build.sh
